<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openmrs.module</groupId>
    <artifactId>emr</artifactId>
    <version>2.3.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>EMR Module</name>
    <description>An EMR that runs on top of the OpenMRS platform</description>
    <url>https://wiki.openmrs.org/display/docs/EMR+Module+Module+Module</url>

    <developers>
        <developer>
            <name>Partners In Health</name>
        </developer>
    </developers>

    <organization>
        <name>Partners In Health</name>
        <url>http://pih.org</url>
    </organization>

    <scm>
        <connection>scm:git:git@github.com:PIH/openmrs-module-emr.git</connection>
        <developerConnection>scm:git:git@github.com:PIH/openmrs-module-emr.git</developerConnection>
        <url>scm:git:git@github.com:PIH/openmrs-module-emr.git</url>
    </scm>

    <modules>
        <module>api</module>
        <module>omod</module>
    </modules>

    <properties>
        <openMRSVersion>1.10.4</openMRSVersion>
        <emrapiVersion>1.34.0</emrapiVersion>
        <uiframeworkVersion>3.24.0</uiframeworkVersion>
        <appframeworkVersion>2.17.0</appframeworkVersion>
        <idgenVersion>4.10.0</idgenVersion>
        <htmlformentryVersion>3.13.1</htmlformentryVersion>
        <providermanagementVersion>2.14.0</providermanagementVersion>
        <metadatasharingVersion>1.9.0</metadatasharingVersion>
        <metadatamappingVersion>1.6.0</metadatamappingVersion>
        <reportingVersion>1.26.0</reportingVersion>
        <calculationVersion>1.3.0</calculationVersion>
        <serializationxstreamVersion>0.2.16</serializationxstreamVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <uicommonsVersion>2.24.0</uicommonsVersion>
        <htmlformentryuiVersion>2.3.0</htmlformentryuiVersion>
    </properties>

    <dependencies>

        <!-- Begin OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <!-- annoyingly needed to access address support class -->
        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.test</groupId>
            <artifactId>openmrs-test</artifactId>
            <version>${openMRSVersion}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS core -->

        <!-- Begin OpenMRS modules -->
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-1.10</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uiframework-api</artifactId>
            <version>${uiframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appframework-api</artifactId>
            <version>${appframeworkVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatamapping-api</artifactId>
            <version>${metadatamappingVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen</artifactId>
            <version>${idgenVersion}</version>
            <type>pom</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-api</artifactId>
            <version>${idgenVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api-1.10</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <version>${providermanagementVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <version>${reportingVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <version>${calculationVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-1.9</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-1.10</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-2.0</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>

        <!-- OpenMRS modules required for testing -->
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatasharing-api</artifactId>
            <version>${metadatasharingVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uicommons-api</artifactId>
            <version>${uicommonsVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentryui-omod</artifactId>
            <version>${htmlformentryuiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <!-- End OpenMRS modules -->

        <!-- start other dependencies -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>13.0.1</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.2</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>3.0.5.RELEASE</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- end other dependencies -->

    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <target>1.6</target>
                        <source>1.6</source>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openmrs.maven.plugins</groupId>
                    <artifactId>maven-openmrs-plugin</artifactId>
                    <version>1.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.3.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jasig.maven</groupId>
                    <artifactId>sass-maven-plugin</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <sassSourceDirectory>${basedir}/src/main/webapp</sassSourceDirectory>
                        <outputDirectory>${basedir}/src/main/webapp/resources/styles</outputDirectory>
                        <baseOutputDirectory>${basedir}/src/main/webapp/resources/styles</baseOutputDirectory>
                        <skin>scss</skin>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>de.saumya.mojo</groupId>
                    <artifactId>gem-maven-plugin</artifactId>
                    <version>0.28.6</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                        <argLine>-Duser.language=en -Duser.region=US -Xmx512m -XX:MaxPermSize=512m</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <properties>
                        <property>
                            <name>openMRSVersion</name>
                            <version>[1.9.0,1.10.0-!)</version>
                        </property>
                    </properties>
                </configuration>
            </plugin>
        </plugins>

    </build>

    <repositories>
        <repository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>https://openmrs.jfrog.io/artifactory/public</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>https://openmrs.jfrog.io/artifactory/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>


    <distributionManagement>
        <repository>
            <id>openmrs-repo-modules-pih</id>
            <name>Modules</name>
            <url>https://openmrs.jfrog.io/artifactory/modules-pih/</url>
        </repository>
        <snapshotRepository>
            <id>openmrs-repo-modules-pih-snapshots</id>
            <name>OpenMRS Snapshots</name>
            <url>https://openmrs.jfrog.io/artifactory/modules-pih-snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
